<resources>
    <string name="app_name">UTN FRC - Educación a Distancia</string>
    <string name="app_title">Universidad Tecnológica Nacional</string>
    <string name="app_subtitle">Facultad Regional Córdoba</string>
    <string name="app_subtitle2">SEU Area Educación a Distancia</string>
    <string name="app_short_title">UTN FRC</string>
    <string name="app_fulltitle">Universidad Tecnológica Nacional Facultad Regional Córdoba SEU Area Educación a Distancia</string>
    <string name="label_tab1">Inicio</string>
    <string name="label_tab2">Cursos</string>
    <string name="label_tab3">Noticias</string>
    <string name="label_tab4">Contacto</string>
    <string name="label_tab5">Radio</string>
    <string name="label_tab6">GotoMeeting</string>
    <string name="label_tab7">Cronograma</string>
    <string name="label_tab8">Mas</string>
    <string name="label_tab9">Videoconferencia</string>
    <string name="acerca_de">Acerca de...</string>
    <string name="salir">Salir</string>
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="enviar">Enviar</string>
    <string name="nodata">No hay datos...</string>
    <string name="prefs">Preferencias</string>
    <string name="verfotos">Ver Fotos</string>
    <string name="play">Reproducir</string>
    <string name="pause">Pausar</string>
    <string name="loading">Cargando...</string>
    <string name="load">Recargar</string>
    <string name="search">Buscar...</string>
    <string name="refresh">Actualizar</string>
    <string name="version">Version 1.0.1</string>
    <string name="utnfrc">UTN - FRC</string>
    <string name="utnfrc_email" translatable="false"><a href="mailto:prensa@extension.frc.utn.edu.ar">Contacto</a></string>
    <string name="utnfrc_website" translatable="false"><a href="http://uv.frc.utn.edu.ar">Sitio Web</a></string>
    <string name="utnfrc_descripcion">Aplicación creada para la Universidad Tecnológica Nacional - Facultad Regional Córdoba.\n 2017 \u00A9 Copyright. Todos los derechos reservados.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rssURl" translatable="false">https://www.frc.utn.edu.ar/prensa/?rss</string>
    <string name="cursosUrl" translatable="false">http://educacionadistancia.frc.utn.edu.ar/cursos</string>
    <string name="contactoUrl">http://educacionadistancia.frc.utn.edu.ar/contacto</string>
    <string name="prensaUrl">http://www.frc.utn.edu.ar/prensa</string>
    <string name="inicioUrl" translatable="false">http://educacionadistancia.frc.utn.edu.ar</string>
    <string name="g2mUrl" translatable="false">https://www.gotomeeting.com/es-es/meeting/join-meeting</string>
    <string name="cronoLoginUrl">https://uv.frc.utn.edu.ar/login/index.php</string>
    <string name="cronoResourceUrl">https://uv.frc.utn.edu.ar/mod/resource/view.php?id=37625</string>
    <string name="cronoResourceUrl2">https://drive.google.com/file/d/1IWDlkFrXQ-nK3O8P5-DNh_EHtPbDYzQA/view?usp=sharing</string>
    <string name="csBasicasUrl" translatable="false">http://b9000224.ferozo.com/utn</string>
    <string name="cronoLoading">Cargando cronogramas de cursos...</string>
    <string name="cronoData" translatable="false">username=aplicacionmobile&amp;password=mobile821</string>
    <string name="cronoUnidad">Unidad</string>
    <string name="cronoExamen">Examenes</string>
    <string name="doubleback">Presione nuevamente back para salir...</string>
    <string name="radionotifytitle">UTNFRC - Radio Streaming</string>
    <string name="radionotifytext">Se está reproduciendo radio FM 94.3 - Radio UTN</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Tablero</string>
    <string name="title_notifications">Notificaciones</string>
    <string name="more">Mas</string>
    <string name="autogestion">Autogestión</string>
    <string name="csbasicas">Cs. Básicas</string>
    <string name="virtual">Ed. a Distancia</string>
    <string name="g2m_description">Acceder al sitio de GotoMeeting</string>
    <string name="radio_description">Escuchar la radio de la Universidad FM 94.3</string>
    <string name="cursos_description">Ver las diplomaturas de Educacion a Distancia.</string>
    <string name="contacto_description">Contactese con el departamento de Educación a Distancia.</string>
    <string name="videoconferencia_description">Utilice la plataforma de videoconferencia de la Universidad.</string>
    <string name="crono_description">Vea el cronograma de cursos de nuestra plataforma de Educación a Distancia</string>
    <string name="radio_media" translatable="false">http://radio.solumedia.com.ar:8200/stream</string>
    <string name="channel_name">Radio</string>
    <string name="channel_description">Escuchando radio UTN.</string>
    <string name="title_activity_fragment_autogestion">Loguearse</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Clave (opcional)</string>
    <string name="action_sign_in">Logueo o Registro</string>
    <string name="action_sign_in_short">Logueo</string>
    <string name="error_invalid_email">La dirección de email es invalida</string>
    <string name="error_invalid_password">La clave es muy corta</string>
    <string name="error_incorrect_password">La clave es incorrecta</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="permission_rationale">"Se necesitan permisos de contactos para proporcionar el correo electrónico."
    </string>
    <string name="presentacion">presentacion</string>
    <string name="clases">clases</string>
    <string name="fecha">fecha</string>
</resources>
