<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_acerca_de"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
   >
    <ImageView
        android:id="@+id/about_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/utnfrc"
        android:layout_marginBottom="5dp" />
    <TextView
        android:id="@+id/about_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/utnfrc_descripcion"/>
    <TextView
        android:id="@+id/about_utnfrc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/utnfrc"/>
    <TextView
        android:id="@+id/about_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:textColorLink="@color/colorAccent"
        android:text="@string/utnfrc_email"/>
    <TextView
        android:id="@+id/about_website"
        android:textColorLink="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/utnfrc_website"/>
</LinearLayout>
