<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingStart="35dp"
    android:paddingTop="8dp"
    android:paddingEnd="5dp"
    android:paddingBottom="8dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorDisabled"
        app:cardCornerRadius="5dp"
        app:contentPadding="3dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/clases"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:elevation="1dp"
                android:outlineProvider="background"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="1dp"
                android:paddingBottom="5dp"
                android:text="@string/clases"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/presentacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/clases"
                android:layout_alignParentStart="true"
                android:background="@color/colorNavText"
                android:drawableStart="@android:drawable/presence_online"
                android:drawablePadding="@dimen/activity_horizontal_margin"
                android:padding="5dp"
                android:text="@string/presentacion"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/clases" />

            <TextView
                android:id="@+id/fecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/presentacion"
                android:layout_alignParentStart="true"
                android:background="@color/colorNavText"
                android:drawableStart="@android:drawable/presence_away"
                android:drawablePadding="@dimen/activity_horizontal_margin"
                android:paddingStart="32dp"
                android:paddingTop="5dp"
                android:paddingEnd="1dp"
                android:paddingBottom="5dp"
                android:text="@string/fecha"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/presentacion"
                app:srcCompat="@android:drawable/presence_invisible" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>